<resources>
    <string name="app_name">AndroidPractice</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rx_observer">Rx Observer</string>
    <string name="result">Result:</string>
    <string name="english">English</string>
    <string name="ukrainian">Ukrainian</string>
    <string name="language_settings">Language settings</string>
    <string name="galaxy_title" translatable="false">Galaxy</string>
    <string name="galaxy_desc" translatable="false">NGC 4414, a typical spiral galaxy</string>
    <string name="galaxy_article_text" translatable="false">NGC 4414, a typical spiral galaxy in the constellation Coma Berenices, is about 55,000 light-years in diameter and approximately 60 million light-years away from Earth. A galaxy is a gravitationally bound system of stars, stellar remnants, interstellar gas, dust, and dark matter.[1][2] The word galaxy is derived from the Greek galaxias (γαλαξίας), literally \"milky\", a reference to the Milky Way. Galaxies range in size from dwarfs with just a few hundred million (108) stars to giants with one hundred trillion (1014) stars,[3] each orbiting its galaxy\'s center of mass.  Galaxies are categorized according to their visual morphology as elliptical,[4] spiral, or irregular.[5] Many galaxies are thought to have supermassive black holes at their active centers. The Milky Way\'s central black hole, known as Sagittarius A*, has a mass four million times greater than the Sun.[6] As of March 2016, GN-z11 is the oldest and most distant observed galaxy with a comoving distance of 32 billion light-years from Earth, and observed as it existed just 400 million years after the Big Bang.  Recent estimates of the number of galaxies in the observable universe range from 200 billion (2×1011)[7] to 2 trillion (2×1012) or more,[8][9] containing more stars than all the grains of sand on planet Earth.[10] Most of the galaxies are 1,000 to 100,000 parsecs in diameter (approximately 3000 to 300,000 light years) and separated by distances on the order of millions of parsecs (or megaparsecs). For comparison, the Milky Way has a diameter of at least 30,000 parsecs (100,000 LY) and is separated from the Andromeda Galaxy, its nearest large neighbor, by 780,000 parsecs (2.5 million LY).</string>
    <string name="animations">Animations</string>
    <string name="key_frame_button_label" translatable="false">Key Frame Animations</string>
    <string name="shared_element_button_label" translatable="false">Shared Element Animations</string>
    <string name="logoTransitionName" translatable="false">logoTransitionName</string>
    <string name="titleTransitionName" translatable="false">title_trans</string>
    <string name="inflater">Inflater</string>
    <string name="add_view">Add view</string>
    <string name="print_results">Print results</string>
    <string name="coroutines">Coroutines</string>
    <string name="hello_from_couroutines">hello from couroutines</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="choose_from_gallery">Choose from gallery</string>
    <string name="photos">Photos</string>
    <string name="media">Media</string>
    <string name="recycler_view">Recycler view</string>
</resources>
